services/apiserver-deployment-darklang/apiserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darklang-tls-ingress
  namespace: darklang
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: darklang-tls-ip2
spec:
  defaultBackend:
    service:
      name: apiserver-service
      port:
        number: 80
  tls:
    - secretName: darklang.com-tls
